# self-polishing-cpp

planning_final_siemens_new/__MACOSX/planning_final_siemens/: ._CMakeLists.txt
planning_final_siemens_new/__MACOSX/planning_final_siemens/src/: ._safe_polish_main.cpp
planning_final_siemens_new/__MACOSX/planning_final_siemens/src/src/contrib/: ._graphbuilder.cpp
planning_final_siemens_new/planning_final_siemens/: CMakeLists.txt  Makefile  README.md  safe_theta_test.csv
planning_final_siemens_new/planning_final_siemens/parameter/: parameters.txt
planning_final_siemens_new/planning_final_siemens/parameter/wp_setup/: abc.txt  planePoints.txt  segs.txt  weldTraj.txt  weld_right.mat  weld_right.txt  weld_top.mat
planning_final_siemens_new/planning_final_siemens/src/: CMakeLists.txt  MyCFS.cpp  main.cpp  safe_polish_main.cpp  test  test.cpp
planning_final_siemens_new/planning_final_siemens/src/lib/: CMakeLists.txt  CapPos.h  distance_constraint_3d.h  global_var.h  load_parameter.h  math_pack.h  numerical_gradient.h  planning_problem_3d_position.h  problemCFS_qp3d_position.h  robot_property_eigen.h  safe_polishing.h  sci_arma.h  structure.h  util.h
planning_final_siemens_new/planning_final_siemens/src/lib/QP_lib/: Array.hh  QuadProg++.cc
